<resources>
<!--    <string name="cdrp_mon">Mon</string>-->
<!--    <string name="cdrp_tue">Tue</string>-->
<!--    <string name="cdrp_wed">Wed</string>-->
<!--    <string name="cdrp_thu">Thu</string>-->
<!--    <string name="cdrp_fri">Fri</string>-->
<!--    <string name="cdrp_sat">Sat</string>-->
<!--    <string name="cdrp_sun">Sun</string>-->
    <string name="cdrp_mon">M</string>
    <string name="cdrp_tue">T</string>
    <string name="cdrp_wed">W</string>
    <string name="cdrp_thu">T</string>
    <string name="cdrp_fri">F</string>
    <string name="cdrp_sat">S</string>
    <string name="cdrp_sun">S</string>


    <string name="cdrp_m">M</string>
    <string name="cdrp_tu">T</string>
    <string name="cdrp_w">W</string>
    <string name="cdrp_th">T</string>
    <string name="cdrp_f">F</string>
    <string name="cdrp_sa">S</string>
    <string name="cdrp_su">S</string>

    <string-array name="week_sun_sat">
        <item>@string/cdrp_sun</item>
        <item>@string/cdrp_mon</item>
        <item>@string/cdrp_tue</item>
        <item>@string/cdrp_wed</item>
        <item>@string/cdrp_thu</item>
        <item>@string/cdrp_fri</item>
        <item>@string/cdrp_sat</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title_time_picker">Select Time</string>
    <string name="select_time">Select a Time</string>

</resources>
