<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_180sdp"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/rlTimePickerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/_6sdp">

        <com.yehia.mira_calendar_date_range.customviews.CustomTextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_time_picker"
            android:textColor="@color/default_date_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <com.yehia.mira_calendar_date_range.customviews.CustomTextView
            android:id="@+id/tvHeaderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/default_date_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <com.yehia.mira_calendar_date_range.customviews.CustomTextView
            android:id="@+id/tvHeaderDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/done"
            android:textColor="@color/default_date_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTimePickerContainer"
        android:gravity="center">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numbersTextColor="@color/calendar_text"
            android:timePickerMode="spinner">

        </TimePicker>

    </RelativeLayout>

</RelativeLayout>